@@ -15,8 +15,8 @@ room behind you, and a doorway right.
 	These are the executive suites of the battlestar.
 Luxurious staterooms carpeted with crushed velvet and adorned with beaten
 gold open onto this parlor. A wide staircase with ivory banisters leads
-up or down. This parlor leads into a hallway left. The bridal suite is right.
-Other rooms lie ahead and behind you.
+up or down. This parlor leads into a hallway left. The bridal suite is
+right. Other rooms lie ahead and behind you.
 
 >-: 
 	You are in what was once an elegant stateroom.
